# munich_rental

./: .gitignore  Makefile  README.md  pyproject.toml
docs/wiki/: 2_timeline.md
